# projectdraw

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeListsOld.txt  README.md  TODO.txt  oldCMakeLists.txt  vcpkg.json
examples/3d_demo/: CMakeLists.txt
examples/3d_demo/src/: main.cpp
examples/cuda_demo/: CMakeLists.txt
examples/cuda_demo/lib/: gol.lib
examples/cuda_demo/src/: main.cpp
examples/cuda_demo/src/cuda/: gol.cu  gol.h
examples/recorder_demo/: CMakeLists.txt
examples/recorder_demo/src/: encoder.h  main.cpp
examples/texture_demo/: CMakeLists.txt
examples/texture_demo/src/: main.cpp
src/Core/: CMakeLists.txt  common.h  core.cpp  core.h
src/Core/Collision/: sap.h
src/Core/Loader/: loader.cpp  loader.h
src/Core/Mesh/: basicmesh.cpp  basicmesh.h
src/Core/Mesh/Primitives/: basicmesh.cpp  basicmesh.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  pgenerator.cpp  pgenerator.h  primitives.h
src/Core/Mesh/Primitives/Image/: image.h
src/Core/Mesh/Util/: box.cpp  box.h
src/Core/Model/: box.h  model.cpp  model.h
src/Core/Physics/: ghostobject.cpp  ghostobject.h  physics.h  physicsobject.cpp  physicsobject.h  rigidbody.cpp  rigidbody.h
src/Core/Physics/Collision/: hitboxobject.cpp  hitboxobject.h
src/Core/Physics/CollisionShapes/: cshape.cpp  cshape.h
src/Core/Renderer/: arenderer.cpp  arenderer.h
src/Core/Renderer/DeferredRenderer/: deferred.cpp  deferred.h  light_util.cpp
src/Core/Renderer/DeferredRenderer/Interface/: deferred_drawable.cpp  deferred_drawable.h  deferred_mesh.cpp  deferred_mesh.h  deferred_sceneobject.cpp  deferred_sceneobject.h  deferred_text.cpp  deferred_text.h
src/Core/Renderer/FlatRenderer/: Neues Textdokument.txt  flat.cpp  flat.h
src/Core/Renderer/FlatRenderer/Interface/: flat_drawable.cpp  flat_drawable.h  flat_mesh.cpp  flat_mesh.h  flat_multilinetext.cpp  flat_multilinetext.h  flat_sceneobject.cpp  flat_text.cpp  flat_text.h  flatdrawable.cpp  flatdrawable.h  flatmesh.cpp  flatmesh.h  flatsceneobject.cpp  flatsceneobject.h  flattext.cpp  flattext.h
src/Core/Renderer/ForwardRenderer/Basic/: forward.cpp  forward.h
src/Core/Renderer/ForwardRenderer/Interface/: forward_drawable.cpp  forward_drawable.h  forward_mesh.cpp  forward_mesh.h  forward_sceneobject.cpp  forward_sceneobject.h  forward_text.cpp  forward_text.h
src/Core/Renderer/Interface/: renderobject.cpp  renderobject.h
src/Core/Resource/: loader.cpp  loader.h  resourcemanager.cpp  resourcemanager.h
src/Core/Scene/: ascene.cpp  ascene.h  drawable.cpp  drawable.h  scene.cpp  scene.h  sceneobject.cpp  sceneobject.h
src/Core/Scene/Animation/: animatable.h
src/Core/Scene/Camera/: camera.cpp  camera.h  orthocamera.cpp  orthocamera.h  perspcamera.cpp  perspcamera.h  scenecamera.cpp  scenecamera.h
src/Core/Scene/Camera/Util/: freecamera.cpp  freecamera.h
src/Core/Scene/Instancing/: instancer.cpp  instancer.h
src/Core/Scene/Light/: dlight.cpp  dlight.h  light.cpp  light.h  lights.h  plight.cpp  plight.h  slight.cpp  slight.h
src/Core/Scene/Particle/: particlegenerator.cpp  particlegenerator.h  particles.h
src/Core/Scene/Particle/2D/: billboard_generator.cpp  billboard_generator.h  point_generator.cpp  point_generator.h
src/Core/Scene/Particle/3D/: billboard_generator.cpp  billboard_generator.h  point_generator.cpp  point_generator.h
src/Core/Scene/Primitive/: geometry.cpp  geometry.h  pgenerator.cpp  pgenerator.h  primitives.h
src/Core/Scene/Primitive/2D/: geometry.cpp  geometry.h
src/Core/Scene/Primitive/3D/: cube.cpp  cube.h
src/Core/Scene/Renderer/: arenderer.cpp  arenderer.h  r_deferred.cpp  r_deferred.h
src/Core/Scene/Renderer/DeferredRenderer/: deferred.cpp  deferred.h  light_util.h  renderer.cpp  renderer.h
src/Core/Scene/Scenes/: imgscene.cpp  imgscene.h  scene.cpp  scene.h  subscene.cpp  subscene.h  texscene.cpp  texscene.h
src/Core/Scene/Text/: font.cpp  font.h  multiline_text.cpp  multiline_text.h  text.cpp  text.h
src/Core/Scene/Texture/: texscene.cpp  texscene.h  texture.cpp  texture.h
src/Core/Scene/Texture/Filter/: filter.h
src/Core/Scene/UI/: uiscene.cpp  uiscene.h
src/Core/Scene/UI/Components/: uicomponent.cpp  uicomponent.h
src/Core/Scene/UI/HUD/: hud.cpp  hud.h
src/Core/Scene/Util/: moveable.cpp  moveable.h  rotator.cpp  rotator.h
src/Core/Shader/: shader.cpp  shader.h
src/Core/Texture/: texture.cpp  texture.h
src/Core/Texture/Filter/: filter.h
src/Core/Texture/Filter/Antialias/: smaa.cpp  smaa.h
src/Core/Texture/Filter/HDR/: hdr.cpp  hdr.h
src/Core/Texture/Filter/SSAO/: ssao.cpp  ssao.h
src/Core/Util/: conversion.cpp  conversion.h  vehicle.cpp  vehicle.h
src/Core/Util/Config/: configurator.cpp  configurator.h
src/Core/Util/Debug/: bulletdebug.cpp  bulletdebug.h  debug.hpp  logging.cpp  logging.h  vector.cpp  vector.h
src/Core/Util/Mouse/: mouse.cpp  mouse.h
src/Core/Util/Transform/: moveable.cpp  moveable.h  rotator.cpp  rotator.h
src/Core/Window/: window.cpp  window.h
src/Physics/: CMakeLists.txt
src/Physics/Physics3D/Collision/Shapes/: cshape.cpp  cshape.h
src/Physics/Physics3D/CollisionObject/: collisionobject.cpp  collisionobject.h
src/Physics/Physics3D/CollisionObject/Rigidbody/: rigidbody.cpp  rigidbody.h
src/Physics/Physics3D/CollisionObject/Trigger/: triggervolume.cpp  triggervolume.h
src/Physics/Physics3D/CollisionObject/Vehicle/: raycastvehicle.cpp  raycastvehicle.h
src/Physics/Physics3D/PhysicObjects/: ghostobject.cpp  rigidbody.cpp  rigidbody.h
src/Physics/Physics3D/PhysicsObjects/: physicsobject.h  rigidbody.h
src/Physics/Physics3D/PhysicsObjects/Rigidbody/: rigidbody.cpp  rigidbody.h
src/Physics/Physics3D/PhysicsObjects/Trigger/: triggervolume.cpp  triggervolume.h
src/Physics/Physics3D/PhysicsObjects/Vehicle/: raycastvehicle.cpp  raycastvehicle.h
src/Physics/Physics3D/Util/: conversion.cpp  conversion.h  debugdrawer.cpp  debugdrawer.h
src/Physics/Physics3D/World/: collisionworld.cpp  collisionworld.h  discreteworld.cpp  discreteworld.h
src/Recorder/: CMakeLists.txt  glrecorder.cpp  glrecorder.h  recorder.cpp  recorder.h
(+187 files in other folders)
